--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "firebase": "^10.12.0",
+    "firebase": "^10.12.2",
     "lucide-react": "^0.395.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -22,6 +22,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-tabs": "^6.0.2",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4",
